--- a/templates/userinfo.html
+++ b/templates/userinfo.html
@@ -1,3 +1,4 @@
+{% load poll_extras %}
 <!DOCTYPE html>
 <html>
 
@@ -14,6 +15,15 @@
 
     <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
     <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+    <link crossorigin="anonymous" media="all"
+          integrity="sha512-lLo2nlsdl+bHLu6PGvC2j3wfP45RnK4wKQLiPnCDcuXfU38AiD+JCdMywnF3WbJC1jaxe3lAI6AM4uJuMFBLEw=="
+          rel="stylesheet" href="https://assets-cdn.github.com/assets/frameworks-08fc49d3bd2694c870ea23d0906f3610.css"/>
+    <link crossorigin="anonymous" media="all"
+          integrity="sha512-mv6mDRPrioZTM6DqvWmoRTqzLBRhHXVLHuh4NbZvbWLfjVpC7gqihEHCfY+IR3fRoQ3KD7FLLz422a7iH/HT/g=="
+          rel="stylesheet" href="https://assets-cdn.github.com/assets/github-4d9ab9919c1f80062f9616df3655449f.css"/>
+
+
 </head>
 
 <body>
@@ -49,56 +59,104 @@
         <ul>
             <li>
                 <a href="#" class="active">
-                    <i class="icon iconfont icon-lingdang"></i>消息
-                    <span class="badge">42</span></a>
-            </li>
-            <li>
-                <a href="#">
-                    <i class="icon iconfont icon-fangzidichan"></i>
-                    房源管理
+                    <i class="icon iconfont icon-lingdang"></i>个人项目
                 </a>
-            </li>
-            <li>
-                <a href="#">
-                    <i class="icon iconfont icon-wenda"></i>
-                    问答
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <i class="icon iconfont icon-icon--"></i>
-                    卖房
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <i class="icon iconfont icon-pinglun"></i>
-                    评论
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <i class="icon iconfont icon-geren"></i>
-                    个人资料
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <i class="icon iconfont icon-jilu"></i>
-                    看房记录
-                </a>
-            </li>
         </ul>
     </div>
     <div class="right">
         <div class="tap">
-            <span>系统消息</span>
+            <span>我的项目</span>
         </div>
         <div class="container">
-            <div class="no-doc">
-                <img src="../static/images/no_doc.jpg"/>
-                <p>您还没有消息哦~</p>
+
+
+            <div class="px-2" style="margin: auto;width: 700px">
+
+
+                <div class="d-flex flex-column flex-md-row flex-justify-between border-bottom pb-3 position-relative">
+                    <h3>
+                        项目数量
+                    </h3>
+                </div>
+
+
+                <ul class="repo-list">
+
+
+                    {% for item in datas %}
+
+                        <li class="repo-list-item d-flex flex-column flex-md-row flex-justify-start py-4 public source">
+                            <div class="col-12 col-md-8 pr-md-3">
+                                <h3>
+                                    <a class="v-align-middle"
+                                       href="/show?name={{ item.excel|spliexc }}">{{ item.pname }}</a>
+
+                                </h3>
+
+                                <p class="col-12 col-md-9 d-inline-block text-gray mb-2 pr-4">
+                                    {{ item.describle }}
+                                </p>
+
+                                <div class="d-flex flex-wrap">
+                                    <p class="f6 text-gray mr-3 mb-0 mt-2">
+                                        {{ item.user }}
+                                    </p>
+
+                                    <p class="f6 text-gray mr-3 mb-0 mt-2">
+                                        {{ item.uploadtime }}
+                                    </p>
+
+                                </div>
+                            </div>
+
+                            <div class="flex-shrink-0 col-6 col-md-4 pt-2 pr-md-3 d-flex">
+
+                                <div class="pl-2 pl-md-0 text-right flex-auto min-width-0">
+                                    <a class="muted-link">
+                                        <svg aria-label="star" class="octicon octicon-star" viewBox="0 0 14 16"
+                                             version="1.1"
+                                             width="14" height="16" role="img">
+                                            <path fill-rule="evenodd"
+                                                  d="M14 6l-4.9-.64L7 1 4.9 5.36 0 6l3.6 3.26L2.67 14 7 11.67 11.33 14l-.93-4.74L14 6z"></path>
+                                        </svg>
+                                        {{ item.downtimes }}
+                                    </a>
+                                </div>
+                            </div>
+                        </li>
+
+                    {% endfor %}
+
+
+                </ul>
+                <div class="paginate-container codesearch-pagination-container">
+                    <div class="d-flex d-md-inline-block pagination" data-pjax="true">
+                        {% if hasLast %}
+                            <a href="?page={{ current_page|add:-1 }}">Previous</a>
+                        {% endif %}
+
+                        {% for i in page_num %}
+
+
+                            {% if current_page == forloop.counter %}
+                                <em class="current" data-total-pages="100">{{ forloop.counter }}</em>
+                            {% else %}
+                                <a href="?page={{ forloop.counter }}">{{ forloop.counter }}</a>
+                            {% endif %}
+
+                        {% endfor %}
+                        {% if hasNext %}
+                            <a class="next_page" rel="next" href="?page={{ current_page|add:1 }}">Next</a>
+                        {% endif %}
+
+
+                    </div>
+                </div>
+
+
             </div>
+
+
         </div>
     </div>
 </div>
@@ -113,17 +171,17 @@
             <div class="modal-body">
                 <div id="username">
                     <span class="glyphicon glyphicon-user"><label style="vertical-align: inherit;">用户名:</label></span>
-                    <input type="text" name="uname" id="uname"><br>
+                    <input type="text" name="uname" id="uname" value="{{ user.username }}"><br>
                 </div>
-                <div id="password">
+                <div id="wqpassword">
                     <span class="glyphicon glyphicon-lock"><label style="vertical-align: inherit;">原密码:</label></span>
                     <input type="password" name="password" id="password"><br>
                     <span class="glyphicon glyphicon-lock"><label style="vertical-align: inherit;">新密码:</label></span>
                     <input type="password" name="newpassword" id="newpassword"><br>
                 </div>
-                <div id="email">
+                <div id="wqemail">
                     <span class="glyphicon glyphicon-envelope"><label style="vertical-align: inherit;">&nbsp;&nbsp;&nbsp;邮箱:</label></span>
-                    <input type="email" name="email" id="email">
+                    <input type="email" name="email" id="email" value="{{ user.email }}">
                 </div>
             </div>
             <div class="modal-footer">
@@ -135,30 +193,40 @@
 </div>
 
 <script>
+
+    $.ajaxSetup({
+        data: {csrfmiddlewaretoken: '{{ csrf_token }}'},
+    });
     let modifyuserinfo = function () {
         let username = $("#uname").val();
         let password = $("#password").val();
         let newpassword = $("#newpassword").val();
         let email = $("#email").val();
-        let filter = /^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/;
+        let filter = /^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/
         if (filter.test(email)) {
             if (username != "" && password != "" && newpassword != "" && email != "") {
+                console.log("OOOO");
                 let data = {"username": username, "password": password, "newpassword": newpassword, "email": email};
                 $.ajax({
-                    url: "",
+                    url: "{% url "modfiyuserinfo" %}",
                     type: "post",
                     data: data,
                     dataType: 'text',
 
                     success: function (res) {
-                        if (res.equal("success")) {
+                        console.log(res)
+                        if (res == "success") {
 
+                            alert("您的个人信息已经修改成功")
+                        }
+                        else {
+                            alert("您的个人信息修改失败")
                         }
 
                     },
                     error: function (res) {
 
-                        if (res.equal("error")) {
+                        if (res == "error") {
 
                         }
 
@@ -167,9 +235,8 @@
                 })
             }
         }
-
-
     }
+
 
 </script>
 </html>
